# test-assignment-teamup-drf

./: Dockerfile  README.md  pyproject.toml
iq_eq_app/: apps.py
test_iqeq/: db.sqlite3  manage.py
test_iqeq/iq_eq_app/: models.py  serializers.py  tests.py  urls.py  views.py
test_iqeq/iq_eq_app/migrations/: 0001_initial.py  0002_auto_20230612_2033.py  0003_auto_20230612_2045.py
test_iqeq/test_iqeq/: asgi.py  settings.py  urls.py  wsgi.py
