[tool.poetry]
name = "test-iq-eq"
version = "0.1.0"
description = ""
authors = ["artemiikulikov <aapqwhat@gmail.com>"]
readme = "README.md"
packages = [{include = "test_iq_eq"}]

[tool.poetry.dependencies]
python = "~3.10"
django = "~3.2"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
